# libcrc

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  checksum.h  cmake_install.cmake  crc16.c  crc32.c  crc64.c  crc8.c  crcccitt.c  crcdnp.c  crckrmit.c  crcsick.c  gentab32.h  nmea-chk.c  testall.c  testall.h  testcrc.c  testnmea.c
